--- a/SITIO NUTRICION/servicios.html
+++ b/SITIO NUTRICION/servicios.html
@@ -10,7 +10,8 @@
         href="https://fonts.googleapis.com/css2?family=Changa+One&family=Open+Sans:wght@300;400;700&family=Quicksand&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/nutricion.css" </head>
+    <link rel="stylesheet" href="css/nutricion.css">
+</head>
 
 <body>
     <header>
@@ -21,10 +22,10 @@
     </header>
     <nav>
         <ul class="">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a class="activo" href="servicios.html">Servicios</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="nosotros.html">Recetas</a></li>
+            <li><a class="activo" href="servicios.html">Sugerencias</a></li>
+            <li><a href="galeria.html">Tips</a></li>
             <li><a href="novedades.html">Novedades</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
