--- a/SITIO NUTRICION/index.html
+++ b/SITIO NUTRICION/index.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
     <main class="">
-        <div>
+        <div class="padre">
             <img class="imagen" src="img/home/nutricion.jpg" alt="comida">
         </div>
         <div class="columnas">
