--- a/SITIO NUTRICION/nosotros.html
+++ b/SITIO NUTRICION/nosotros.html
@@ -71,7 +71,7 @@
 
                 </div>
                 <div class="persona">
-                    <img src="img/nosotros/trufas.jpg" alt="Trufas de dátiles">
+                    <img class="diferente" src="img/nosotros/trufas.jpg" alt="Trufas de dátiles">
                     <h5>Trufas de dátiles y cacao amargo</h5>
                     <br />
                     <h6>Los dátiles son ideales para endulzar
